// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ButtonGroup
    isBlock={false}
    isMultiSelect={false}
    selectedKeys={Array []}
  >
    <div
      className="button-group orion-fusion-theme"
      role="group"
    >
      <ButtonGroupButton
        aria-pressed={false}
        className=""
        isDisabled={false}
        key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        text="Button 1"
      >
        <Button
          aria-pressed={false}
          className="button-group-button orion-fusion-theme"
          data-terra-button-group-button={true}
          iconType="decorative"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          text="Button 1"
          type="button"
          variant="neutral"
        >
          <button
            aria-disabled={false}
            aria-pressed={false}
            className="button neutral orion-fusion-theme button-group-button orion-fusion-theme"
            data-terra-button-group-button={true}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="button"
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span
                className=""
              >
                Button 1
              </span>
            </span>
          </button>
        </Button>
      </ButtonGroupButton>
      <ButtonGroupButton
        aria-pressed={false}
        className=""
        isDisabled={false}
        key="2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        text="Button 2"
      >
        <Button
          aria-pressed={false}
          className="button-group-button orion-fusion-theme"
          data-terra-button-group-button={true}
          iconType="decorative"
          isBlock={false}
          isCompact={false}
          isDisabled={false}
          isIconOnly={false}
          isReversed={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          text="Button 2"
          type="button"
          variant="neutral"
        >
          <button
            aria-disabled={false}
            aria-pressed={false}
            className="button neutral orion-fusion-theme button-group-button orion-fusion-theme"
            data-terra-button-group-button={true}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            role="button"
            type="button"
          >
            <span
              className="button-label text-only"
            >
              <span
                className=""
              >
                Button 2
              </span>
            </span>
          </button>
        </Button>
      </ButtonGroupButton>
    </div>
  </ButtonGroup>
</ThemeContextProvider>
`;

exports[`should apply correct role for multiSelect button group 1`] = `
<div
  className="button-group"
  role="group"
>
  <ButtonGroupButton
    aria-checked={false}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    text="Button 2"
  />
</div>
`;

exports[`should apply correct role for single select button group 1`] = `
<div
  className="button-group"
  role="radiogroup"
>
  <ButtonGroupButton
    aria-checked={false}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="radio"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-checked={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="radio"
    text="Button 2"
  />
</div>
`;

exports[`should apply correct role for single select button group 2`] = `
<div
  className="button-group"
  role="radiogroup"
/>
`;

exports[`should only render enabled buttons as toggle buttons 1`] = `
<div
  className="button-group"
  role="group"
>
  <ButtonGroupButton
    aria-pressed={true}
    className="is-selected"
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
  <ButtonGroupButton
    className=""
    isDisabled={true}
    key="dis"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Disabled Button"
  />
</div>
`;

exports[`should render a block button group with children 1`] = `
<div
  className="button-group is-block"
  role="group"
>
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="3"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 3"
  />
</div>
`;

exports[`should render a button group with children 1`] = `
<div
  className="button-group"
  role="group"
>
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
</div>
`;

exports[`should render a button group with children selected 1`] = `
<div
  className="button-group"
  role="group"
>
  <ButtonGroupButton
    aria-pressed={true}
    className="is-selected"
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
</div>
`;

exports[`should render an empty component 1`] = `
<div
  className="button-group"
  role="group"
/>
`;

exports[`should select a button 1`] = `
<div
  className="button-group"
  role="group"
>
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
</div>
`;

exports[`should select a button 2`] = `
<div
  className="button-group"
  role="group"
>
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="1"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 1"
  />
  <ButtonGroupButton
    aria-pressed={false}
    className=""
    isDisabled={false}
    key="2"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    text="Button 2"
  />
</div>
`;
